--- a/04-CSS-Layouts/style.css
+++ b/04-CSS-Layouts/style.css
@@ -2,6 +2,7 @@
   /* border-top: 10px solid #1098ad; */
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 /* PAGE SECTIONS */
@@ -14,20 +15,23 @@ body {
 }
 
 .container {
-  width: 1200px;
+  width: 1400px;
   /* margin-left: auto;
   margin-right: auto; */
   margin: 0 auto;
 }
 
 .main-header {
-  background-color: #b2bdd0;
+  background-color: #cbd3e1;
   /* padding: 20px;
   padding-left: 40px;
   padding-right: 40px; */
   padding: 20px 40px;
-  margin-bottom: 60px;
+
+  /* margin-bottom: 60px; */
   /* height: 80px; */
+  display: flex;
+  justify-content: space-between;
 }
 
 nav {
@@ -36,7 +40,7 @@ nav {
 }
 
 article {
-  margin-bottom: 60px;
+  /* margin-bottom: 60px; */
 }
 
 .post-header {
@@ -134,6 +138,7 @@ li:last-child {
 
 .related {
   list-style: none;
+  margin-left: 0px;
 }
 
 body {
@@ -269,7 +274,7 @@ nav p {
 /*
 float
 */
-
+/*
 .author-img {
   float: left;
   margin-bottom: 10px;
@@ -305,8 +310,94 @@ article {
 aside {
   float: right;
   width: 300px;
+  padding: 50px 40px;
+  box-sizing: border-box;
 }
 
 footer p {
   clear: both;
+}
+
+h4 {
+  margin-bottom: 20px;
+}
+*/
+
+/* float */
+/*
+.main-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.author-box {
+  display: flex;
+  align-items: center;
+  margin-bottom: 15px;
+}
+
+.author-box p {
+  margin-left: 10px;
+}
+
+.related-post {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  margin-bottom: 30px;
+}
+
+.related-link:link {
+  font-size: 17px;
+  font-weight: bold;
+  font-style: normal;
+  margin-bottom: 5px;
+  display: block;
+}
+.related-author {
+  margin-bottom: 0px;
+  font-size: 20px;
+  font-weight: normal;
+  font-style: italic;
+}
+
+.row {
+  display: flex;
+  align-items: flex-start;
+  gap: 75px;
+}
+*/
+.author-box {
+  display: flex;
+  align-items: center;
+  margin-bottom: 15px;
+}
+
+.author-box p {
+  margin-left: 15px;
+}
+.container {
+  display: grid;
+  grid-template-columns: 1fr auto;
+  column-gap: 20px;
+  row-gap: 40px;
+  align-items: start;
+}
+
+.main-header {
+  width: 1400px;
+  grid-column: 1/-1;
+}
+
+article {
+  width: 1000px;
+}
+
+aside {
+  width: 350px;
+}
+
+footer {
+  grid-column: 1/-1;
 }
